--- a/pages/productos.html
+++ b/pages/productos.html
@@ -8,6 +8,7 @@
     <meta name="keywords" content="Audio, Auriculares, Teclados, Tecnología, Set-up, Gaming, Periféricos, Venta, Componentes">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@sweetalert2/theme-dark@5/dark.css" />
     <link rel="shortcut icon" href="../images/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="../css/main.css">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -53,7 +54,7 @@
           <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
           <button class="btn btn-dark btn-dark-outline-success btn-style" type="submit"><i class="bi bi-search"></i></button>
         </form>
-          <button class="btn btn-dark btn-dark-outline-success btn-style" role="button" aria-expanded="false" id="verCarrito"> <i class="bi bi-cart"></i></button>
+          <button class="btn btn-dark btn-dark-outline-success btn-style" role="button" aria-expanded="false" id="verCarrito"> <span id="cantidadCarrito" class="cantidad-carrito"></span> <i class="bi bi-cart"></i></button>
         
       </div>
     </div>
@@ -178,6 +179,7 @@
     </article>
         
     <div id="modalContainer" class="modal-container"></div>
+    <div id="contCompra" class="cont-compra"></div>
 
 <footer class="pt-5 pb-4 mt-5 bg-footer">
   <div class="container-fluid text-center">
@@ -195,6 +197,7 @@
 </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.js"></script>
 <script type="module" src="../js/carrito.js"></script>
 </body>
 </html>
